2002-12-06   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWTemplateParserXML.[mh]
    		o move references to libxml into .m file 
			(David Ayers <d.ayers@inode.at> patch)
    		o change parser error message to output lines before columns 
			(David Ayers <d.ayers@inode.at> patch)
	* GSWeb.framework/Makefile.preamble.in:
    		o let gnustep-make figure out whether to link against debug libs or not.  
			(David Ayers <d.ayers@inode.at> patch)
	* Makefile.preamble:
	    	o remove usage of INSTALL_ROOT_DIR as this isn't used consistently
			(David Ayers <d.ayers@inode.at> patch)
	
2002-12-06   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWExtensions.framework/Makefile.preamble: 
		o added -I/usr/include/libxml2 in ADDITIONAL_INCLUDE_DIRS
	* GSWExtensionsGSW.framework/Makefile.preamble: 
		o added -I/usr/include/libxml2 in ADDITIONAL_INCLUDE_DIRS
	* GSWeb/GSWeb.h:
		o removed #include <GSWeb/GSWTemplateParserXML.h>
	* GSWCheckBox.m:
		o logs
		o rewritten some part to match specifications
		o removed rcsId
		o documentation

	* GSWeb/GSWRadioButton.m:
		o logs
		o rewritten some part to match specifications
		o removed rcsId
		o documentation

	* GSWeb/GSWTemplateParser.m
		o added #include "GSWTemplateParserXML.h"
		o removed rcsId

	* GSWeb/GSWTemplateParserANTLR.m
		o added #include "GSWTemplateParserANTLR.h"
		o removed rcsId

	* GSWeb/GSWTemplateParserXML.m
		o added #include "GSWTemplateParserXML.h"
		o removed rcsId

	* GSWeb/GSWHTMLAttrParser.m
		o added #include "GSWHTMLAttrParser.h"
		o removed rcsId
	* GSWeb/GSWRepetition.m:
		o logs
	* Testing/DynamicElements/Makefile.preamble
		o removed -lFoundationExt 
	* Examples/hello/Makefile.preamble
		o removed -lFoundationExt 
	* GSWeb/GSWBundle.m:
		o logs
	* GSWeb/GSWInput.[hm]gswinput 
		o added -valueInContext:context
		o removed rcsId
	* Testing/DynamicElements/CheckBox1Page.*
		o added	
	*Testing/DynamicElements/CheckBox2Page.*
		o added	
	* Testing/DynamicElements/RadioButton1Page.*